[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "promptcue"
version = "0.2.0"
description = "PromptCue - Classify and enrich prompts with routing cues for LLM pipelines"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "Informity", email = "contact@informity.com" }
]
keywords = [
  "nlp",
  "query-understanding",
  "classification",
  "rag",
  "llm",
  "semantic-search",
  "routing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0,<3",
  "PyYAML>=6.0,<7",
  "numpy>=1.24,<3",
]

[project.urls]
Homepage      = "https://github.com/informity/promptcue"
Source        = "https://github.com/informity/promptcue"
"Bug Tracker" = "https://github.com/informity/promptcue/issues"
Changelog     = "https://github.com/informity/promptcue/blob/master/CHANGELOG.md"

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=2.2,<6",
]
detection = [
  "langdetect>=1.0.9,<2",
]
linguistic = [
  "spacy>=3.7,<4",
]
keywords = [
  "keybert>=0.7,<1",
]
dev = [
  "build>=1.0,<2",
  "pytest>=7.0,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=4.0,<8",
  "ruff>=0.1,<1",
  "mypy>=1.0,<2",
  "types-PyYAML>=6.0,<7",
]
all = [
  "sentence-transformers>=2.2,<6",
  "langdetect>=1.0.9,<2",
  "spacy>=3.7,<4",
  "keybert>=0.7,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptcue = ["data/*.yaml", "py.typed"]

[tool.pytest.ini_options]
pythonpath   = ["src"]
addopts      = "-q"
testpaths    = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version    = "3.13"
strict            = false
warn_unused_ignores   = true
warn_redundant_casts  = true
warn_return_any       = false

